# transcriptor

./: .gitignore  ACCEPTANCE.md  CLAUDE.md  PROMPT.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  release.yml
marketing/: .gitignore  astro.config.mjs  package.json  tsconfig.json
marketing/remotion/: Root.tsx  Showcase.tsx
marketing/src/components/: Download.astro  FAQ.astro  Features.astro  (+4 more)
promo/: .gitignore  package.json
promo/src/: Root.tsx  TranscribeFlow.tsx
samples/: README.md  en-au-long.m4a  en-uk-medium-noisy.m4a  en-uk-medium.m4a  en-us-short.m4a
samples/id/: README.md  id-long.m4a  id-medium-noisy.m4a  id-medium.m4a  id-short.m4a
scripts/: fetch-sidecars.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-apple-darwin  ffprobe-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/examples/: abort_isolate.rs  chunk_check.rs  endurance_check.rs  engine_check.rs  queue_check.rs  segment_rerun_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  library.rs  logs.rs  main.rs  models.rs  whisper.rs
src/components/: AddCustomModelDialog.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Dropzone.tsx  ErrorBoundary.tsx  Header.tsx  LanguageSelect.tsx  Picker.tsx  RerunDialog.tsx  SessionSidebar.tsx  UpdateBanner.tsx  Waveform.tsx
src/lib/: format.ts  languages.ts  time.ts  types.ts  useDownloads.ts
src/pages/: Home.tsx  Library.tsx  Models.tsx  Settings.tsx  Transcript.tsx
(+4 files in other folders)
